--- a/404.md
+++ b/404.md
@@ -7,4 +7,10 @@ Hey, the page you were looking for was not found :-(
 
 Well, you can take a look at the [Home page](Index.md) or look at another page:
 
-{{site.posts}}
+<ul>
+  {% for post in site.posts %}
+    <li>
+      <a href="{{ post.url }}">{{ post.title }}</a>
+    </li>
+  {% endfor %}
+</ul>
