--- a/404.md
+++ b/404.md
@@ -1,11 +1,12 @@
 ---
 permalink: /404.html
+layout: default
 ---
 # 404 Page not found
 
 Hey, the page you were looking for was not found :-(
 
-Well, you can take a look at the [Home page](Index.md) or look at another page:
+Well, you can take a look at the [Home page]({{ "/home/" | base_url }}) or look at another post:
 
 <ul>
   {% for post in site.posts %}
